fix: align text

--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -25,12 +25,14 @@ body {
     margin-bottom: 8px;
     margin-top: 20px;
     color: #fff;
+    text-align: center;
 }
 
 .sub {
     color: #a0b3d1;
     margin-bottom: 30px;
     font-size: 16px;
+    text-align: center;
 }
 
 label {
